--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gst-plugins-bad1.0 (1.22.4-1deepin1) unstable; urgency=medium
+
+  *skip-elements_netsim.
+
+ -- LiChengGang <lichenggang@uniontech.com>  Mon, 20 Nov 2023 00:41:46 +0800
+
 gst-plugins-bad1.0 (1.22.4-1) unstable; urgency=medium
 
   * Team upload
