--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gst-plugins-bad1.0 (1.24.6-1deepin3) unstable; urgency=medium
+
+  * Apply changes from 1.24.10-2:
+    - d/patches: meson: Drop max version bound from neon
+
+ -- Tianyu Chen <sweetyfish@deepin.org>  Thu, 16 Oct 2025 22:15:42 +0800
+
 gst-plugins-bad1.0 (1.24.6-1deepin1) unstable; urgency=medium
 
   *This patch fixes this critical warning when registering MSDK.
